--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -528,59 +528,59 @@
 					</div>
 				</div>
 
-		<div class="swiper-slide">
-			<div class="main-card">
-				<div class="link main-card__img slide__img--slide" href="#">
-					<div class="main-card__img-link slide__img-link">
-						<a class="button main-card__button" href="">
-							Основы
-						</a>
+				<div class="swiper-slide">
+					<div class="main-card">
+						<div class="link main-card__img slide__img--slide" href="#">
+							<div class="main-card__img-link slide__img-link">
+								<a class="button main-card__button" href="">
+									Основы
+								</a>
+							</div>
+							<h2 class="title main-card__title slider__main-card-title">
+								Что1 такое метавселенная?
+							</h2>
+						</div>
+						<div class="main-card__info slide__info">
+							<p class="text main-card__time">
+								4 минуты
+							</p>
+							<a class="link link_level_new" href="#">
+								Новичок
+							</a>
+						</div>
 					</div>
-					<h2 class="title main-card__title slider__main-card-title">
-						Что1 такое метавселенная?
-					</h2>
 				</div>
-				<div class="main-card__info slide__info">
-					<p class="text main-card__time">
-						4 минуты
-					</p>
-					<a class="link link_level_new" href="#">
-						Новичок
-					</a>
-				</div>
-			</div>
-		</div>
 
-		<div class="swiper-slide">
-			<div class="main-card">
-				<div class="link main-card__img slide__img--slide" href="#">
-					<div class="main-card__img-link slide__img-link">
-						<a class="button main-card__button" href="">
-							Основы
-						</a>
+				<div class="swiper-slide">
+					<div class="main-card">
+						<div class="link main-card__img slide__img--slide" href="#">
+							<div class="main-card__img-link slide__img-link">
+								<a class="button main-card__button" href="">
+									Основы
+								</a>
+							</div>
+							<h2 class="title main-card__title slider__main-card-title">
+								Что такое метавселенная?
+							</h2>
+						</div>
+						<div class="main-card__info slide__info">
+							<p class="text main-card__time">
+								4 минуты
+							</p>
+							<a class="link link_level_new" href="#">
+								Новичок
+							</a>
+						</div>
 					</div>
-					<h2 class="title main-card__title slider__main-card-title">
-						Что такое метавселенная?
-					</h2>
 				</div>
-				<div class="main-card__info slide__info">
-					<p class="text main-card__time">
-						4 минуты
-					</p>
-					<a class="link link_level_new" href="#">
-						Новичок
-					</a>
-				</div>
+
+				<!-- If we need navigation buttons -->
+				<div class="swiper-button-prev"></div>
+				<div class="swiper-button-next"></div>
+
+				<!-- If we need scrollbar -->
+				<!-- <div class="swiper-scrollbar"></div> -->
 			</div>
-		</div>
-
-			<!-- If we need navigation buttons -->
-			<div class="swiper-button-prev"></div>
-			<div class="swiper-button-next"></div>
-
-			<!-- If we need scrollbar -->
-			<!-- <div class="swiper-scrollbar"></div> -->
-		</div>
 	</section>
 
 	<section class="last">
@@ -656,9 +656,11 @@
 						Protocol (POAP)
 					</h2>
 					<p class="text main-card__text">
-					Протокол, который создает цифровые значки или предметы коллекционирования с использованием технологии блокчейн.
-					В то время как аббревиатура происходит от названия протокола, POAP также используется для описания самих предметов
-					коллекционирования.
+						Протокол, который создает цифровые значки или предметы коллекционирования с использованием технологии
+						блокчейн.
+						В то время как аббревиатура происходит от названия протокола, POAP также используется для описания самих
+						предметов
+						коллекционирования.
 					</p>
 					<a class="link main-card__link-btn" href="">
 						Полное определение
@@ -987,23 +989,28 @@
 						Что ищем?
 					</h2>
 					<form action="" class="glossary__form study__form" method="post">
-						<input class="glossary__input study__input" type="text" name="text" placeholder="Поиск по глоссарию" value=""
-							id="glossarySearch">
+						<input class="glossary__input study__input" type="text" name="text" placeholder="Поиск по глоссарию"
+							value="" id="glossarySearch">
 						<button class="button_form_none glossary__form-button study__form-button" type="button" name="button">
 							<svg class="form__form-of" width="17" height="17" aria-hidden="true" focusable="false">
 								<use href="assets/images/svg/sprite.svg#searglos"></use>
 							</svg>
 						</button>
 					</form>
-					<h2 class="title study-main-card__title">
-						242
-					</h2>
-					<p class="text study__text">
-						Это количество терминов в нашем глоссарии. Сколько знаете вы?
-					</p>
+
+					<div class="study-main-card__title-wrap">
+						<h2 class="title study-main-card__title">
+							242
+						</h2>
+						<p class="text study__text">
+							Это количество терминов в нашем глоссарии. Сколько знаете вы?
+						</p>
+					</div>
+
 					<a class="link main-card__link-btn main-card__link-btn--small main-card__link-btn--active" href="">
 						В глоссарий
 					</a>
+
 				</div>
 
 				<div class="main-card study__main-card">
@@ -1063,18 +1070,20 @@
 				</div>
 
 				<div class="subs__mail">
-					<h2 class="title subs__title--desktop">
+					<h2 class="title subs__title subs__title--desktop">
 						Никакого шума. Только сигнал.
 					</h2>
 
 					<form action="" class="glossary__form subs__form" method="post">
 
-						<input class="glossary__input" type="text" name="text" placeholder="Введите почту" value=""
-							id="glossarySearch">
-						<button class="subs__form-button--desktop" type="submit" name="button">
-							Подписаться
-						</button>
+						<div class="subs__input-wrapper">
+							<input class="glossary__input subs__input" type="text" name="text" placeholder="Введите почту" value=""
+								id="glossarySearch">
 
+							<button class="button button_color_yellow subs__form-button--desktop" type="submit" name="button">
+								Подписаться
+							</button>
+						</div>
 						<label class="subs__checkbox">
 							<input class="subs__checkbox-input" type="checkbox">
 
@@ -1085,7 +1094,7 @@
 
 						</label>
 
-						<button class="button subs__form-button--mobile button_color_yellow" type="submit" name="button">
+						<button class="button button_color_yellow subs__form-button--mobile" type="submit" name="button">
 							Подписаться
 						</button>
 					</form>
