education-2__inner fix

--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -666,7 +666,7 @@
 			Образовательные статьи
 		</h2>
 
-		<div class="education__inner education-2__inner">
+		<!-- <div class="education__inner education-2__inner">
 			<div class="card education__card education-2__card div1">
 				<div class="card__content education__img education__img_inform_ape education-2__img">
 				</div>
@@ -841,6 +841,138 @@
 						</a>
 						<a class="button content__button" href="#">
 							Экономика
+						</a>
+					</div>
+				</div>
+			</div>
+		</div> -->
+
+		<div class="popular__content">
+
+			<div class="main-card popular__grid-item1">
+				<div class="main-card__link">
+					<a class="button main-card__button" href="#">
+						Торговля
+					</a>
+					<a class="button main-card__button" href="#">
+						Основы
+					</a>
+					<a class="button main-card__button" href="#">
+						Технический анализ
+					</a>
+					<a class="button main-card__button" href="#">
+						+1
+					</a>
+				</div>
+				<h2 class="title main-card__title">
+					Полное руководство по торговле криптовалютой для начинающих
+				</h2>
+				<div class="main-card__info">
+					<p class="text main-card__time">
+						63 минуты
+					</p>
+					<a class="link link_level_new" href="#">
+						Новичок
+					</a>
+				</div>
+			</div>
+
+			<div class="main-card popular__grid-item2">
+				<div class="main-card__info">
+					<p class="text main-card__time">
+						4 минуты
+					</p>
+					<a class="link link_level_advanced" href="#">
+						Продвинутый
+					</a>
+				</div>
+				<h2 class="title main-card__title">
+					12 популярных свечных моделей и паттернов, используемых в техническом анализе
+				</h2>
+				<div class="main-card__img popular__img--binance">
+					<div class="main-card__link popular__main-card-link">
+						<a class="button main-card__button" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__button" href="#">
+							Основы
+						</a>
+						<a class="button main-card__button" href="#">
+							+3
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="main-card popular__grid-item3">
+				<div class="main-card__info">
+					<p class="text main-card__time">
+						4 минуты
+					</p>
+					<a class="link link_level_advanced" href="#">
+						Продвинутый
+					</a>
+				</div>
+				<h2 class="title main-card__title">
+					Как начать работу с Binance Smart за 60 секунд
+				</h2>
+				<div class="main-card__img popular__img--mean">
+					<div class="main-card__link  popular__main-card-link">
+						<a class="button main-card__button" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__button" href="#">
+							Основы
+						</a>
+						<a class="button main-card__button" href="#">
+							+3
+						</a>
+					</div>
+				</div>
+			</div>
+
+			<div class="main-card popular__grid-item4">
+				<div class="main-card__link">
+					<a class="button main-card__button" href="#">
+						Binance
+					</a>
+				</div>
+				<h2 class="title main-card__title">
+					Что такое усреднение долларовой стоимости (DCA)?
+				</h2>
+				<div class="main-card__info">
+					<p class="text main-card__time">
+						6 минут
+					</p>
+					<a class="link link_level_pro" href="#">
+						Продвинутый
+					</a>
+				</div>
+			</div>
+
+			<div class="main-card popular__grid-item5">
+				<div class="main-card__info popular__main-card-info">
+					<p class="text main-card__time">
+						4 минуты
+					</p>
+					<a class="link link_level_new" href="#">
+						Новичек
+					</a>
+				</div>
+				<h2 class="title main-card__title popular__main-card-title">
+					История цен биткоина
+				</h2>
+
+				<div class="main-card__img popular__img--btc">
+					<div class="main-card__link popular__main-card-link--end">
+						<a class="button main-card__button" href="#">
+							Торговля
+						</a>
+						<a class="button main-card__button" href="#">
+							Основы
+						</a>
+						<a class="button main-card__button" href="#">
+							+3
 						</a>
 					</div>
 				</div>
