--- a/source/markup/index.html
+++ b/source/markup/index.html
@@ -574,13 +574,16 @@
 					</div>
 				</div>
 
-				<!-- If we need navigation buttons -->
-				<div class="swiper-button-prev"></div>
-				<div class="swiper-button-next"></div>
-
-				<!-- If we need scrollbar -->
-				<!-- <div class="swiper-scrollbar"></div> -->
 			</div>
+
+<div class="swiper-button swiper-button-prev"></div>
+
+<div class="swiper-button swiper-button-next"></div>
+			<!-- If we need scrollbar -->
+			<!-- <div class="swiper-scrollbar"></div> -->
+		</div>
+		<!-- If we need navigation buttons -->
+
 	</section>
 
 	<section class="last">
@@ -645,7 +648,7 @@
 					</h2>
 				</div>
 
-				<div class="main-card item3">
+				<div class="main-card item3 study__main-card">
 					<div class="main-card__link">
 						<a class="button main-card__button" href="#">
 							Глоссарий
