--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -518,9 +518,21 @@
 					</a>
 				</div>
 				<div class="filter__all">
+
 					<a class="button filter__button-link filter__button-link_state_ok" href="">
 						Altcoin ✓
 					</a>
+
+					<!-- <label for="altcoin">Altcoin</label>
+					<input type="checkbox" class="custom-checkbox" id="altcoin" name="happy" value="yes"> -->
+
+					<label class="custom-radio">
+
+						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+						<span class="custom-radio__text">Altcoin</span>
+					</label>
+
+
 					<a class="button filter__button-link" href="">
 						Binance +
 					</a>
