--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -518,79 +518,112 @@
 					</a>
 				</div>
 				<div class="filter__all">
-
-					<a class="button filter__button-link filter__button-link_state_ok" href="">
-						Altcoin ✓
-					</a>
-
 					<!-- <label for="altcoin">Altcoin</label>
 					<input type="checkbox" class="custom-checkbox" id="altcoin" name="happy" value="yes"> -->
 
 					<label class="custom-radio">
-
 						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
 						<span class="custom-radio__text">Altcoin</span>
 					</label>
 
+							<label class="custom-radio">
+								<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+								<span class="custom-radio__text">Binance</span>
+							</label>
 
-					<a class="button filter__button-link" href="">
-						Binance +
-					</a>
-					<a class="button filter__button-link" href="">
-						Биткоин +
-					</a>
-					<a class="button filter__button-link" href="">
-						Блокчейн +
-					</a>
-					<a class="button filter__button-link filter__button-link filter__button-link_state_ok" href="">
-						Консенсус ✓
-					</a>
-					<a class="button filter__button-link" href="">
-						DeFi +
-					</a>
-					<a class="button filter__button-link" href="">
-						Технический анализ +
-					</a>
-					<a class="button filter__button-link" href="">
-						Еще+12
-					</a>
+									<label class="custom-radio">
+										<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+										<span class="custom-radio__text">Биткоин</span>
+									</label>
+
+											<label class="custom-radio">
+												<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+												<span class="custom-radio__text">Блокчейн</span>
+											</label>
+
+													<label class="custom-radio">
+														<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+														<span class="custom-radio__text">Консенсус</span>
+													</label>
+
+															<label class="custom-radio">
+																<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+																<span class="custom-radio__text">DeFi</span>
+															</label>
+
+																	<label class="custom-radio">
+																		<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+																		<span class="custom-radio__text">Технический анализ</span>
+																	</label>
+
+																			<label class="custom-radio">
+																				<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+																				<span class="custom-radio__text">Еще+12</span>
+																			</label>
+
 					<div class="filter__all-desktop">
-						<a class="button filter__button-link" href="">
-							Технологии ✓
-						</a>
-						<a class="button filter__button-link" href="">
-							Технический анализ +
-						</a>
-						<a class="button filter__button-link" href="">
-							Криптография +
-						</a>
-						<a class="button filter__button-link" href="">
-							Экономика +
-						</a>
-						<a class="button filter__button-link" href="">
-							Торговля ✓
-						</a>
-						<a class="button filter__button-link" href="">
-							Ethereum +
-						</a>
-						<a class="button filter__button-link" href="">
-							Приватность +
-						</a>
-						<a class="button filter__button-link" href="">
-							Майнинг +
-						</a>
-						<a class="button filter__button-link" href="">
-							Metaverse +
-						</a>
-						<a class="button filter__button-link" href="">
-							История +
-						</a>
-						<a class="button filter__button-link" href="">
-							Консенсус +
-						</a>
-						<a class="button filter__button-link" href="">
-							Основы +
-						</a>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Технологии</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Технический анализ</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Криптография</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Экономика</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Торговля</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Ethereum</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Приватность</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Майнинг</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Metaverse</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">История</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Консенсус</span>
+</label>
+
+<label class="custom-radio">
+	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+	<span class="custom-radio__text">Основы</span>
+</label>
+	
+
 					</div>
 				</div>
 			</div>
