--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -490,7 +490,7 @@
 	<section class="glossary">
 		<header class="glossary__header container">
 			<a
-				class="glossary__back back"
+				class="back"
 				href="/"
 			>
 				<svg
