Update breadcrumb and back

--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -489,25 +489,56 @@
 
 	<section class="content">
 		<div class="content__wrap container">
-
-			<nav aria-label="Breadcrumb" class="content__top breadcrumb">
-				<ol class="menu breadcrumb__menu">
-					<li class="breadcrumb__item">
-						<a class="link content_link" href="#"> Главная </a>
-					</li>
-					<li class="breadcrumb__item">
-						<a class="link content_link" href="#"> Статьи </a>
-					</li class="breadcrumb__item">
-					<li class="breadcrumb__item">
-						<span aria-current="page">Что такое фан-токен ФК «Порту» (PORTO)?</span>
-					</li>
-				</ol>
-				<a class="breadcrumb__back" href="#">
-					<svg class="breadcrumb__svg" width="7" height="10" aria-hidden="true" focusable="false">
-						<use href="assets/images/svg/sprite.svg#armob"></use>
+			<div class="content__box">
+				<a
+					class="back"
+					href="/"
+				>
+					<svg
+						class="back__icon"
+						width="7"
+						height="10"
+						aria-hidden="true"
+						focusable="false"
+					>
+						<use href="assets/images/svg/sprite.svg#arrow-left"></use>
 					</svg>
+					<span class="visually-hidden">
+						Вернуться на главную страницу
+					</span>
 				</a>
-			</nav>
+				<nav
+					class="breadcrumb"
+					aria-label="Хлебные крошки"
+				>
+					<ol class="breadcrumb__list reset-list">
+						<li class="breadcrumb__item">
+							<a
+								class="breadcrumb__link"
+								href="/"
+							>
+								Главная
+							</a>
+						</li>
+						<li class="breadcrumb__item">
+							<a
+								class="breadcrumb__link"
+								href="/"
+							>
+								Статьи
+							</a>
+						</li>
+						<li class="breadcrumb__item">
+							<span
+								class="breadcrumb__link"
+								aria-current="page"
+							>
+								Что такое фан-токен ФК «Порту» (PORTO)?
+							</span>
+						</li>
+					</ol>
+				</nav>
+			</div>
 
 			<h1 class="title">
 				Что такое фантокен ФК «Порту» (PORTO)?
