--- a/source/markup/glossary.html
+++ b/source/markup/glossary.html
@@ -507,21 +507,21 @@
 				</span>
 			</a>
 			<nav
-				class="c-breadcrumb"
+				class="breadcrumb"
 				aria-label="Хлебные крошки"
 			>
-				<ol class="c-breadcrumb__list reset-list">
-					<li class="c-breadcrumb__item">
+				<ol class="breadcrumb__list reset-list">
+					<li class="breadcrumb__item">
 						<a
-							class="c-breadcrumb__link"
+							class="breadcrumb__link"
 							href="/"
 						>
 							Главная
 						</a>
 					</li>
-					<li class="c-breadcrumb__item">
+					<li class="breadcrumb__item">
 						<span
-							class="c-breadcrumb__link"
+							class="breadcrumb__link"
 							aria-current="page"
 						>
 							Глоссарий
