--- a/source/markup/article.html
+++ b/source/markup/article.html
@@ -555,9 +555,7 @@
 					</a>
 				</div>
 
-				<div class="card__content card__img_name_portu">
-
-				</div>
+				<img src="https://picsum.photos/200/300" height="300" alt="">
 
 				<div class="content__button-wrap">
 					<a class="button content__button" href="#">
@@ -645,8 +643,7 @@
 				</p>
 			</div>
 
-			<div class="card__content card__img_name_adt">
-			</div>
+			<img src="https://picsum.photos/200/300" height="300" alt="">
 
 			<h2>
 				Что такое фан-токены Binance?
@@ -697,8 +694,7 @@
 				</p>
 			</div>
 
-			<div class="card__content card__img_name_porto-info">
-			</div>
+			<img src="https://picsum.photos/200/300" height="300" alt="">
 
 			<div class="content__text">
 				<p class="text">
@@ -736,8 +732,7 @@
 				</p>
 			</div>
 
-			<div class="card__content card__img_name_video">
-			</div>
+			<img src="https://picsum.photos/200/300" height="300" alt="">
 
 			<div class="content__buy">
 
@@ -770,13 +765,7 @@
 					</p>
 				</div>
 
-				<div class="content__card-wrap">
-					<div class="card__content card__img_name_bay">
-					</div>
-
-					<div class="card__content card__img_name_sell">
-					</div>
-				</div>
+				<img src="https://picsum.photos/200/300" height="300" alt="">
 			</div>
 
 			<div class="content__summary">
