--- a/source/markup/education-2.html
+++ b/source/markup/education-2.html
@@ -489,46 +489,28 @@
 
 	<article class="filter education__filter container">
 		<div class="filter__box">
-			<a
-			class="back"
-			href="/"
-		>
-			<svg
-				class="back__icon"
-				width="7"
-				height="10"
-				aria-hidden="true"
-				focusable="false"
-			>
-				<use href="assets/images/svg/sprite.svg#arrow-left"></use>
-			</svg>
-			<span class="visually-hidden">
-				Вернуться на главную страницу
-			</span>
-		</a>
-		<nav
-			class="breadcrumb"
-			aria-label="Хлебные крошки"
-		>
-			<ol class="breadcrumb__list reset-list">
-				<li class="breadcrumb__item">
-					<a
-						class="breadcrumb__link"
-						href="/"
-					>
-						Главная
-					</a>
-				</li>
-				<li class="breadcrumb__item">
-					<span
-						class="breadcrumb__link"
-						aria-current="page"
-					>
-						Статьи
-					</span>
-				</li>
-			</ol>
-		</nav>
+			<a class="back" href="/">
+				<svg class="back__icon" width="7" height="10" aria-hidden="true" focusable="false">
+					<use href="assets/images/svg/sprite.svg#arrow-left"></use>
+				</svg>
+				<span class="visually-hidden">
+					Вернуться на главную страницу
+				</span>
+			</a>
+			<nav class="breadcrumb" aria-label="Хлебные крошки">
+				<ol class="breadcrumb__list reset-list">
+					<li class="breadcrumb__item">
+						<a class="breadcrumb__link" href="/">
+							Главная
+						</a>
+					</li>
+					<li class="breadcrumb__item">
+						<span class="breadcrumb__link" aria-current="page">
+							Статьи
+						</span>
+					</li>
+				</ol>
+			</nav>
 		</div>
 
 		<h2 class="text education__title">
@@ -548,108 +530,109 @@
 					<!-- <label for="altcoin">Altcoin</label>
 					<input type="checkbox" class="custom-checkbox" id="altcoin" name="happy" value="yes"> -->
 
-					<label class="custom-radio">
-						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-						<span class="custom-radio__text">Altcoin</span>
+					<label class="check">
+						<input class="check__input" type="checkbox" name="color" value="indigo">
+						<span class="check__box">Altcoin</span>
+						
 					</label>
 
-							<label class="custom-radio">
-								<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-								<span class="custom-radio__text">Binance</span>
-							</label>
+					<label class="custom-radio">
+						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+						<span class="custom-radio__text">Binance</span>
+					</label>
 
-									<label class="custom-radio">
-										<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-										<span class="custom-radio__text">Биткоин</span>
-									</label>
+					<label class="custom-radio">
+						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+						<span class="custom-radio__text">Биткоин</span>
+					</label>
 
-											<label class="custom-radio">
-												<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-												<span class="custom-radio__text">Блокчейн</span>
-											</label>
+					<label class="custom-radio">
+						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+						<span class="custom-radio__text">Блокчейн</span>
+					</label>
 
-													<label class="custom-radio">
-														<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-														<span class="custom-radio__text">Консенсус</span>
-													</label>
+					<label class="custom-radio">
+						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+						<span class="custom-radio__text">Консенсус</span>
+					</label>
 
-															<label class="custom-radio">
-																<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-																<span class="custom-radio__text">DeFi</span>
-															</label>
+					<label class="custom-radio">
+						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+						<span class="custom-radio__text">DeFi</span>
+					</label>
 
-																	<label class="custom-radio">
-																		<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-																		<span class="custom-radio__text">Технический анализ</span>
-																	</label>
+					<label class="custom-radio">
+						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+						<span class="custom-radio__text">Технический анализ</span>
+					</label>
 
-																			<label class="custom-radio">
-																				<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-																				<span class="custom-radio__text">Еще+12</span>
-																			</label>
+					<label class="custom-radio">
+						<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+						<span class="custom-radio__text">Еще+12</span>
+					</label>
 
 					<div class="filter__all-desktop">
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Технологии</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Технологии</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Технический анализ</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Технический анализ</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Криптография</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Криптография</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Экономика</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Экономика</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Торговля</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Торговля</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Ethereum</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Ethereum</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Приватность</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Приватность</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Майнинг</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Майнинг</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Metaverse</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Metaverse</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">История</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">История</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Консенсус</span>
-</label>
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Консенсус</span>
+						</label>
 
-<label class="custom-radio">
-	<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
-	<span class="custom-radio__text">Основы</span>
-</label>
-	
+						<label class="custom-radio">
+							<input class="custom-radio__input" type="checkbox" name="color" value="indigo">
+							<span class="custom-radio__text">Основы</span>
+						</label>
+
 
 					</div>
 				</div>
